--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <title>Prachita's website</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
       <h1>I am Prachita.</h1>
-      <p>a <span class="pro">pro</span>grammer</p>
+      <p>a <span class="pro">pro</span>grammer.</p>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
       <img src="images/mountain.png" alt="mountain-image">
     </div>
