adding more content and images

--- a/index.html
+++ b/index.html
@@ -16,10 +16,41 @@
       <img src="images/mountain.png" alt="mountain-image">
     </div>
     <div class="middle-container">
-
+      <div class="profile">
+        <img class="my-photo" src="images/prachi.jpg" alt="prachi-image">
+        <h2>Hello.</h2>
+        <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="developer" src="images/developer.jpeg" alt="developer-image">
+          <h3>Lorem & Ipsum</h3>
+          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        </div>
+        <div class="skill-row">
+          <iframe src="https://giphy.com/embed/5xaOcLCQqP3rLs1ngM8" width="480" height="324" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/guytrefler-email-signature-devices-5xaOcLCQqP3rLs1ngM8"></a></p>
+          <h3>Lorem Ipsum Dolor</h3>
+          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <a class="btn" href="mailto:prachi.khambalkar@gmail.com">CONTACT ME</a>
+      </div>
     </div>
+
+
     <div class="bottom-container">
-
+      <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+      <a class="footer-link" href="https://twitter.com/">Twitter</a>
+      <a class="footer-link" href="https://www.facebook.com/prachikhambalkar.p">Facebook</a>
+      <p>© 2018 Prachita Khambalkar.</p>
     </div>
+
   </body>
 </html>
