--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <div class="skill-row">
           <img class="developer" src="images/developer.jpeg" alt="developer-image">
           <h3>Lorem & Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+          <p class="skill-description1">Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
         </div>
         <div class="skill-row">
-          <iframe src="https://giphy.com/embed/5xaOcLCQqP3rLs1ngM8" width="480" height="324" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/guytrefler-email-signature-devices-5xaOcLCQqP3rLs1ngM8"></a></p>
+          <iframe class="moving-image" src="https://giphy.com/embed/5xaOcLCQqP3rLs1ngM8" width="200" height="150" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/stickers/guytrefler-email-signature-devices-5xaOcLCQqP3rLs1ngM8"></a></p>
           <h3>Lorem Ipsum Dolor</h3>
-          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+          <p class="skill-description2">Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
         </div>
       </div>
       <hr>
