--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div class="profile">
         <img class="my-photo" src="images/prachi.jpg" alt="prachi-image">
         <h2>Hello.</h2>
-        <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+        <p class="Introduction">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
       </div>
-      <hr>
+      <hr class="hr">
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
@@ -40,7 +40,7 @@
         <h2>Get In Touch</h2>
         <h3>Lorem ipsum dolor sit amet, non elit.</h3>
         <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
-        <a class="btn" href="mailto:prachi.khambalkar@gmail.com">CONTACT ME</a>
+        <a class="button" href="mailto:prachi.khambalkar@gmail.com">CONTACT ME</a>
       </div>
     </div>
 
@@ -49,7 +49,7 @@
       <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
       <a class="footer-link" href="https://twitter.com/">Twitter</a>
       <a class="footer-link" href="https://www.facebook.com/prachikhambalkar.p">Facebook</a>
-      <p>© 2020 Prachita Khambalkar.</p>
+      <p class="copyright">© 2020 Prachita Khambalkar</p>
     </div>
 
   </body>
